@@ -720,7 +720,7 @@ function export_tree_html($path, $filename, $tree_id, $parent_tree_item_id) {
 	if (read_config_option("auth_method") != 0) {
 		$current_user = db_fetch_row("SELECT * FROM user_auth WHERE id=" . read_config_option("export_user_id"));
 
-		$sql_join = "LEFT JOIN user_auth_perms ON (host.id=user_auth_perms.item_id AND user_auth_perms.type=" . PERM_HOSTS . " AND user_auth_perms.user_id=" . read_config_option("export_user_id") . ")";
+		$sql_join  = "LEFT JOIN user_auth_perms ON (host.id=user_auth_perms.item_id AND user_auth_perms.type=" . PERM_HOSTS . " AND user_auth_perms.user_id=" . read_config_option("export_user_id") . ")";
 
 		if ($current_user["policy_hosts"] == "1") {
 			$sql_where = "AND !(user_auth_perms.user_id IS NOT NULL AND graph_tree_items.host_id > 0)";
@@ -728,7 +728,7 @@ function export_tree_html($path, $filename, $tree_id, $parent_tree_item_id) {
 			$sql_where = "AND !(user_auth_perms.user_id IS NULL AND graph_tree_items.host_id > 0)";
 		}
 	}else{
-		$sql_join = "";
+		$sql_join  = "";
 		$sql_where = "";
 	}
 
@@ -813,7 +813,7 @@ function export_tree_html($path, $filename, $tree_id, $parent_tree_item_id) {
 					}
 				}
 			}else{
-    			build_html_file($leaf, "leaf");
+				build_html_file($leaf, "leaf");
 			}
 		}
 	}
@@ -825,7 +825,7 @@ function build_html_file($leaf, $type = "", $array_data = array(), $snmp_index =
 	/* auth check for hosts on the trees */
 	$current_user = db_fetch_row("SELECT * FROM user_auth WHERE id=" . read_config_option("export_user_id"));
 
-	$sql_join = "LEFT JOIN user_auth_perms ON (host.id=user_auth_perms.item_id AND user_auth_perms.type=" . PERM_HOSTS . " AND user_auth_perms.user_id=" . read_config_option("export_user_id") . ")";
+	$sql_join  = "LEFT JOIN user_auth_perms ON (host.id=user_auth_perms.item_id AND user_auth_perms.type=" . PERM_HOSTS . " AND user_auth_perms.user_id=" . read_config_option("export_user_id") . ")";
 
 	if ($current_user["policy_hosts"] == "1") {
 		$sql_where = "AND !(user_auth_perms.user_id IS NOT NULL AND graph_tree_items.host_id > 0)";
@@ -860,10 +860,13 @@ function build_html_file($leaf, $type = "", $array_data = array(), $snmp_index =
 
 			$sql_where = "WHERE graph_tree_items.graph_tree_id=" . $leaf["tree_id"] . "
 				$sql_where
-				AND user_auth_perms.item_id=graph_tree_items.local_graph_id
 				AND graph_templates_graph.local_graph_id!=0
 				AND graph_templates_graph.export='on'
 				AND graph_tree_items.order_key like '$search_key" . str_repeat('_', CHARS_PER_TIER) . str_repeat('0', (MAX_TREE_DEPTH * CHARS_PER_TIER) - (strlen($search_key) + CHARS_PER_TIER)) . "'";
+
+			if ($current_user["policy_graphs"] == 2) {
+				$sql_where .= " AND user_auth_perms.item_id=graph_tree_items.local_graph_id";
+			}
 
 			$filename = clean_up_export_name(get_tree_name($leaf["tree_id"])) . "_leaf.html";
 		}
@@ -889,10 +892,13 @@ function build_html_file($leaf, $type = "", $array_data = array(), $snmp_index =
 
 			$sql_where = "WHERE graph_tree_items.graph_tree_id=" . $leaf["tree_id"] . "
 				$sql_where
-				AND user_auth_perms.item_id=graph_tree_items.local_graph_id
 				AND graph_templates_graph.local_graph_id!=0
 				AND graph_templates_graph.export='on'
 				AND graph_tree_items.order_key like '$search_key" . str_repeat('_', CHARS_PER_TIER) . str_repeat('0', (MAX_TREE_DEPTH * CHARS_PER_TIER) - (strlen($search_key) + CHARS_PER_TIER)) . "'";
+
+			if ($current_user["policy_graphs"] == 2) {
+				$sql_where .= " AND user_auth_perms.item_id=graph_tree_items.local_graph_id";
+			}
 
 			if (strlen($leaf["title"])) {
 				$filename = clean_up_export_name(get_tree_name($leaf["tree_id"]) . "_" . $leaf["title"]) . "_" . $leaf["id"] . "_leaf.html";
@@ -944,21 +950,49 @@ function build_html_file($leaf, $type = "", $array_data = array(), $snmp_index =
 		break;
 	}
 
-	$request = "SELECT DISTINCT
-		graph_templates_graph.id,
-		graph_templates_graph.local_graph_id,
-		graph_templates_graph.height,
-		graph_templates_graph.width,
-		graph_templates_graph.title_cache,
-		graph_templates.name,
-		graph_local.host_id
-		FROM (graph_tree_items, graph_templates_graph)
-		LEFT JOIN graph_templates ON (graph_templates_graph.graph_template_id=graph_templates.id)
-		LEFT JOIN graph_local ON (graph_templates_graph.local_graph_id=graph_local.id)
-		LEFT JOIN host ON (host.id=graph_local.host_id)
-		$sql_join
-		$sql_where
-		ORDER BY graph_templates_graph.title_cache";
+	switch ($type) {
+	case "index":
+		break;
+	case "tree":
+	case "leaf":
+		$request = "SELECT
+			graph_tree_items.id,
+			graph_tree_items.title,
+			graph_tree_items.local_graph_id,
+			graph_tree_items.rra_id,
+			graph_tree_items.order_key,
+			graph_templates_graph.title_cache as title_cache
+			FROM (graph_tree_items,graph_local)
+			LEFT JOIN graph_templates_graph ON (graph_tree_items.local_graph_id=graph_templates_graph.local_graph_id AND graph_tree_items.local_graph_id>0)
+			LEFT JOIN graph_templates ON (graph_templates_graph.graph_template_id=graph_templates.id)
+			LEFT JOIN host ON (host.id=graph_local.host_id)
+			$sql_join
+			$sql_where
+			GROUP BY graph_tree_items.id
+			ORDER BY graph_tree_items.order_key";
+
+		break;
+	case "host":
+	case "gt":
+	case "dq":
+	case "dqi":
+		$request = "SELECT DISTINCT
+			graph_templates_graph.id,
+			graph_templates_graph.local_graph_id,
+			graph_templates_graph.height,
+			graph_templates_graph.width,
+			graph_templates_graph.title_cache,
+			graph_templates.name
+			FROM (graph_tree_items, graph_templates_graph)
+			LEFT JOIN graph_templates ON (graph_templates_graph.graph_template_id=graph_templates.id)
+			LEFT JOIN graph_local ON (graph_templates_graph.local_graph_id=graph_local.id)
+			LEFT JOIN host ON (host.id=graph_local.host_id)
+			$sql_join
+			$sql_where
+			ORDER BY graph_templates_graph.title_cache";
+
+		break;
+	}
 
 	if ($type == "index") {
 		$graphs = array();
@@ -1286,7 +1320,7 @@ function draw_html_left_tree($fp, $tree_id)  {
 }
 
 function grow_dhtml_trees_export($fp, $tree_id) {
-	global $colors, $config;
+	global $colors, $config, $dhtml_trees;
 	include_once(CACTI_BASE_PATH . "/lib/tree.php");
 	include_once(CACTI_BASE_PATH . "/lib/data_query.php");
 
@@ -1307,11 +1341,17 @@ function grow_dhtml_trees_export($fp, $tree_id) {
 		$dhtml_tree_base = $tree_id;
 	}
 
-	$dhtml_tree = create_dhtml_tree_export($dhtml_tree_base);
+	if (!isset($dhtml_trees[$dhtml_tree_base])) {
+		$dhtml_tree = create_dhtml_tree_export($dhtml_tree_base);
+		$dhtml_trees[$dhtml_tree_base] = $dhtml_tree;
+	}else{
+		$dhtml_tree = $dhtml_trees[$dhtml_tree_base];
+	}
 
-	$total_tree_items = sizeof($dhtml_tree) - 1;
-	for ($i = 2; $i <= $total_tree_items; $i++) {
-		fwrite($fp,$dhtml_tree[$i]);
+	foreach($dhtml_tree as $key => $item){
+		if ($key > 1) {
+			fwrite($fp,$item);
+		}
 	}
 
 	fwrite($fp,"foldersTree.treeID = \"t2\"
@@ -1387,7 +1427,7 @@ function create_dhtml_tree_export($tree_id) {
 	/* auth check for hosts on the trees */
 	$current_user = db_fetch_row("SELECT * FROM user_auth WHERE id=" . read_config_option("export_user_id"));
 
-	$sql_join = "LEFT JOIN user_auth_perms ON (host.id=user_auth_perms.item_id AND user_auth_perms.type=" . PERM_HOSTS . " AND user_auth_perms.user_id=" . $current_user["id"] . ")";
+	$sql_join  = "LEFT JOIN user_auth_perms ON (host.id=user_auth_perms.item_id AND user_auth_perms.type=" . PERM_HOSTS . " AND user_auth_perms.user_id=" . $current_user["id"] . ")";
 
 	if ($current_user["policy_hosts"] == "1") {
 		$sql_where = "AND !(user_auth_perms.user_id IS NOT NULL AND graph_tree_items.host_id > 0)";
@@ -1397,7 +1437,7 @@ function create_dhtml_tree_export($tree_id) {
 
 	if (sizeof($tree_list) > 0) {
 	foreach ($tree_list as $tree) {
-        $i++;
+		$i++;
 
 		$heir_sql = "SELECT
 				graph_tree_items.id,
@@ -1406,8 +1446,9 @@ function create_dhtml_tree_export($tree_id) {
 				graph_tree_items.host_id,
 				graph_tree_items.host_grouping_type,
 				host.description as hostname
-				FROM graph_tree_items
+				FROM (graph_tree_items, graph_templates_graph)
 				LEFT JOIN host ON (host.id=graph_tree_items.host_id)
+				LEFT JOIN graph_templates ON (graph_templates_graph.graph_template_id=graph_templates.id)
 				$sql_join
 				WHERE graph_tree_items.graph_tree_id=" . $tree["id"] . "
 				$sql_where
@@ -1429,7 +1470,7 @@ function create_dhtml_tree_export($tree_id) {
 			$tier = tree_tier($leaf["order_key"]);
 
 			if ($leaf["host_id"] > 0) {  //It's a host
-				$dhtml_tree[$i] = "ou" . ($tier) . " = insFld(ou" . ($tier-1) . ", gFld(\"<strong>Host:</strong> " . htmlentities($leaf["hostname"], ENT_QUOTES) . "\", \"" . clean_up_export_name($leaf["hostname"] . "_" . $leaf["id"]) . ".html\"))\n";
+				$dhtml_tree[$i] = "ou" . ($tier) . " = insFld(ou" . ($tier-1) . ", gFld(\"<strong>Host:</strong> " . $leaf["hostname"] . "\", \"" . clean_up_export_name($leaf["hostname"] . "_" . $leaf["id"]) . ".html\"))\n";
 
 				if (read_config_option("export_tree_expand_hosts") == "on") {
 					if ($leaf["host_grouping_type"] == HOST_GROUPING_GRAPH_TEMPLATE) {
@@ -1486,9 +1527,14 @@ function create_dhtml_tree_export($tree_id) {
 					}
 				}
 			}else {
-				$dhtml_tree[$i] = "ou" . ($tier) . " = insFld(ou" . ($tier-1) . ", gFld(\"" . htmlentities($leaf["title"], ENT_QUOTES) . "\", \"" . clean_up_export_name(get_tree_name($tree["id"]) . "_" . $leaf["title"] . "_" . $leaf["id"]) . "_leaf.html\"))\n";
+				$dhtml_tree[$i] = "ou" . ($tier) . " = insFld(ou" . ($tier-1) . ", gFld(\"" . $leaf["title"] . "\", \"" . clean_up_export_name(get_tree_name($tree["id"]) . "_" . $leaf["title"] . "_" . $leaf["id"]) . "_leaf.html\"))\n";
 			}
 		}
+		}else{
+			if ($dhtml_tree_id <> $tree["id"]) {
+				$dhtml_tree[$i] = "ou0 = insFld(foldersTree, gFld(\"" . get_tree_name($tree["id"]) . "\", \"" . clean_up_export_name(get_tree_name($tree["id"])) . "_leaf.html\"))\n";
+				$i++;
+			}
 		}
 	}
 	}
